--- a/_posts/2014-07-19-wmata.markdown
+++ b/_posts/2014-07-19-wmata.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "Nextbus - how accurate is it?"
 date:   2014-07-19
-categories: jekyll
+categories: projects
 tags: [data science, wmata, data viz]
 ---
 
