--- a/404.md
+++ b/404.md
@@ -1,14 +1,17 @@
 ---
 layout: page
-title: "Page Not Found"
-description: "Page not found. Your pixels are in another canvas."
+title: "Hmmm... Page Not Found"
+description: "Page not found."
 image:
-  feature: texture-feature-01.jpg
-  credit: Texture Lovers
-  creditlink: http://texturelovers.com
+  feature: https://farm6.staticflickr.com/5586/14797811385_1662f10705_h.jpg
+  credit: Andrew Brooks
+  creditlink: https://www.flickr.com/photos/123438060@N05/14797811385
 ---  
 
-Sorry, but the page you were trying to view does not exist --- perhaps you can try searching for it below.
+**Sorry!** The page you were trying to view does not exist - probably because I'm messing
+with my website layout.  Oops.
+<br>  
+Try my homepage: [brooksandrew.github.io](brooksandrew.github.io).  That shouldn't change.
 
 <script type="text/javascript">
   var GOOG_FIXURL_LANG = 'en';
