--- a/404.md
+++ b/404.md
@@ -11,7 +11,7 @@ image:
 **Sorry!** The page you were trying to view does not exist - probably because I'm messing
 with my website layout.  Oops.
 <br>  
-Try my homepage: [brooksandrew.github.io](brooksandrew.github.io).  That shouldn't change.
+Try my homepage: [brooksandrew.github.io](http://brooksandrew.github.io).  That shouldn't change.
 
 <script type="text/javascript">
   var GOOG_FIXURL_LANG = 'en';
