--- a/_posts/2014-07-19-wmata.markdown
+++ b/_posts/2014-07-19-wmata.markdown
@@ -27,11 +27,17 @@ Roughly 80% of the time. Play with the app below :)
 
 <iframe style="border: 0px;" src="/simpleblog/assets/html/d3nextbus.html" width="1000" height="700"></iframe>
 
-#### One week of Nextbus predictions
+#### One week of Nextbus predictions:
 <iframe style="border: 0px;" src="/simpleblog/assets/html/busScatter.html" width="1000" height="550"></iframe>
 
 
-See how I figured this out [here](https://github.com/brooksandrew/nextbus).
+<br>
+
+This project on:
+<div markdown="0"><a href="https://github.com/brooksandrew/nextbus" class="btn">github</a></div>
+<a href="http://brooksandrew.github.io/simpleblog/articles/nextbus/" class="btn">my blog post</a>
+
+<!-- See how I figured this out: [here](https://github.com/brooksandrew/nextbus). -->
 
 
 
