--- a/_posts/2014-07-19-wmata.markdown
+++ b/_posts/2014-07-19-wmata.markdown
@@ -30,12 +30,16 @@ Roughly 80% of the time. Play with the app below :)
 #### One week of Nextbus predictions:
 <iframe style="border: 0px;" src="/simpleblog/assets/html/busScatter.html" width="1000" height="550"></iframe>
 
+Each circle is a prediction.  <span style="color:red">Red circles</span> indicate predictions that turn out to be late.
+<span style="color:green">Green circles</span> indicate predictions that turn out to be early.  If predictions are consistently accurate, you will see a straight diagonal line.
+The bowing out or hockey stick shape shows that predictions are often initially optimistic, but later revised upward (delayed).  It appears that Nextbus often reassesses its forecast when predicting arrivals in 8-12 minutes.
+
 
 <br>
 
 This project on:
 <a href="https://github.com/brooksandrew/nextbus" class="btn">github  </a>
-<a href="http://brooksandrew.github.io/simpleblog/articles/nextbus/" class="btn">my blog post</a>
+<a href="http://brooksandrew.github.io/simpleblog/articles/nextbus/" class="btn">blog</a>
 
 <!-- See how I figured this out: [here](https://github.com/brooksandrew/nextbus). -->
 
